# md25010-ros2-slam

./: .gitignore  Dockerfile  README.md  generate_report.py
PartA/: docker-compose.yml
PartA/maps/: turtlebot3_map.pgm  turtlebot3_map.yaml
PartA/src/md25010_nav/: README.md  package.xml  setup.cfg  setup.py
PartA/src/md25010_nav/config/: nav2_params.yaml  slam_params.yaml
PartA/src/md25010_nav/launch/: full_stack.launch.py  nav2_amcl.launch.py  slam.launch.py
PartA/src/md25010_nav/md25010_nav/: send_nav_goals.py
PartC/results/: nav_goals_log.csv
PartC/scripts/: send_nav_goals.py
maps/: nav_goals_log.csv
